PiinkkParser.py
# Generated from Piinkk.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing import TextIO



class PiinkkParser ( Parser ):

    grammarFileName = "Piinkk.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'['", "']'", "'('", "')'", "'='", 
                     "':'", "','", "'=='", "'>'", "'<'", "'!='", "'>='", 
                     "'<='", "'+'", "'-'", "'*'", "'/'", "'{'", "'}'", "'hola mundo'", 
                     "<INVALID>", "'Program'", "'main'", "'VARS'", "'function'", 
                     "'int'", "'float'", "'bool'", "'char'", "'void'", "'return'", 
                     "'read'", "'write'", "'if'", "'then'", "'else'", "'while'", 
                     "'do'", "'FOR'", "'to'", "'Media'", "'Moda'", "'Varianza'", 
                     "'RegresionSimple'", "'PlotXY'", "'Mediana'", "'DesviacionEstandar'", 
                     "'Rango'", "'CoeficienteVariacion'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "WS", "PROGRAM", "MAIN", 
                      "VARS", "FUNCTION", "INT", "FLOAT", "BOOL", "CHAR", 
                      "VOID", "RETURN", "READ", "WRITE", "IF", "THEN", "ELSE", 
                      "WHILE", "DO", "FOR", "TO", "MEDIA", "MODA", "VARIANZA", 
                      "REGRESION_SIMPLE", "PLOTXY", "MEDIANA", "DESVIACION_ESTANDAR", 
                      "RANGO", "COEFICIENTE_VARIACION", "NUMBER", "FLOAT_NUMBER", 
                      "PROGRAMID", "ID", "STRING", "COMMENT" ]

    RULE_prog = 0
    RULE_programita0 = 1
    RULE_type0 = 2
    RULE_array0 = 3
    RULE_if0 = 4
    RULE_if1 = 5
    RULE_else0 = 6
    RULE_while0 = 7
    RULE_while1 = 8
    RULE_for0 = 9
    RULE_var0 = 10
    RULE_var1 = 11
    RULE_vars0 = 12
    RULE_vars1 = 13
    RULE_expresion0 = 14
    RULE_expresion1 = 15
    RULE_exp0 = 16
    RULE_exp1 = 17
    RULE_termino0 = 18
    RULE_termino1 = 19
    RULE_factor0 = 20
    RULE_factor1 = 21
    RULE_bloque0 = 22
    RULE_bloque1 = 23
    RULE_estatuto0 = 24
    RULE_asignacion0 = 25
    RULE_asignacion1 = 26
    RULE_escritura0 = 27
    RULE_escritura1 = 28
    RULE_escri1 = 29
    RULE_escri2 = 30
    RULE_lecturaInt0 = 31
    RULE_return0 = 32
    RULE_typeFun0 = 33
    RULE_fun0 = 34
    RULE_fun1 = 35
    RULE_fun2 = 36
    RULE_fun3 = 37
    RULE_funContent0 = 38
    RULE_funCall = 39
    RULE_funCall0 = 40
    RULE_funCall1 = 41
    RULE_funCallExp = 42
    RULE_funCall2 = 43
    RULE_body0 = 44
    RULE_start = 45

    ruleNames =  [ "prog", "programita0", "type0", "array0", "if0", "if1", 
                   "else0", "while0", "while1", "for0", "var0", "var1", 
                   "vars0", "vars1", "expresion0", "expresion1", "exp0", 
                   "exp1", "termino0", "termino1", "factor0", "factor1", 
                   "bloque0", "bloque1", "estatuto0", "asignacion0", "asignacion1", 
                   "escritura0", "escritura1", "escri1", "escri2", "lecturaInt0", 
                   "return0", "typeFun0", "fun0", "fun1", "fun2", "fun3", 
                   "funContent0", "funCall", "funCall0", "funCall1", "funCallExp", 
                   "funCall2", "body0", "start" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    WS=22
    PROGRAM=23
    MAIN=24
    VARS=25
    FUNCTION=26
    INT=27
    FLOAT=28
    BOOL=29
    CHAR=30
    VOID=31
    RETURN=32
    READ=33
    WRITE=34
    IF=35
    THEN=36
    ELSE=37
    WHILE=38
    DO=39
    FOR=40
    TO=41
    MEDIA=42
    MODA=43
    VARIANZA=44
    REGRESION_SIMPLE=45
    PLOTXY=46
    MEDIANA=47
    DESVIACION_ESTANDAR=48
    RANGO=49
    COEFICIENTE_VARIACION=50
    NUMBER=51
    FLOAT_NUMBER=52
    PROGRAMID=53
    ID=54
    STRING=55
    COMMENT=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programita0(self):
            return self.getTypedRuleContext(PiinkkParser.Programita0Context,0)


        def body0(self):
            return self.getTypedRuleContext(PiinkkParser.Body0Context,0)


        def EOF(self):
            return self.getToken(PiinkkParser.EOF, 0)

        def vars0(self):
            return self.getTypedRuleContext(PiinkkParser.Vars0Context,0)


        def fun0(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PiinkkParser.Fun0Context)
            else:
                return self.getTypedRuleContext(PiinkkParser.Fun0Context,i)


        def getRuleIndex(self):
            return PiinkkParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = PiinkkParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.programita0()
            self.state = 93
            self.match(PiinkkParser.T__0)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 94
                self.vars0()


            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==26:
                self.state = 97
                self.fun0()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.body0()
            self.state = 104
            self.match(PiinkkParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Programita0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(PiinkkParser.PROGRAM, 0)

        def PROGRAMID(self):
            return self.getToken(PiinkkParser.PROGRAMID, 0)

        def getRuleIndex(self):
            return PiinkkParser.RULE_programita0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramita0" ):
                listener.enterProgramita0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramita0" ):
                listener.exitProgramita0(self)




    def programita0(self):

        localctx = PiinkkParser.Programita0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programita0)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(PiinkkParser.PROGRAM)
            self.state = 107
            self.match(PiinkkParser.PROGRAMID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(PiinkkParser.INT, 0)

        def FLOAT(self):
            return self.getToken(PiinkkParser.FLOAT, 0)

        def getRuleIndex(self):
            return PiinkkParser.RULE_type0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType0" ):
                listener.enterType0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType0" ):
                listener.exitType0(self)




    def type0(self):

        localctx = PiinkkParser.Type0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_type0)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            _la = self._input.LA(1)
            if not(_la==27 or _la==28):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PiinkkParser.ID, 0)

        def NUMBER(self):
            return self.getToken(PiinkkParser.NUMBER, 0)

        def getRuleIndex(self):
            return PiinkkParser.RULE_array0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray0" ):
                listener.enterArray0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray0" ):
                listener.exitArray0(self)




    def array0(self):

        localctx = PiinkkParser.Array0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_array0)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(PiinkkParser.ID)
            self.state = 112
            self.match(PiinkkParser.T__1)
            self.state = 113
            self.match(PiinkkParser.NUMBER)
            self.state = 114
            self.match(PiinkkParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(PiinkkParser.IF, 0)

        def expresion0(self):
            return self.getTypedRuleContext(PiinkkParser.Expresion0Context,0)


        def if1(self):
            return self.getTypedRuleContext(PiinkkParser.If1Context,0)


        def getRuleIndex(self):
            return PiinkkParser.RULE_if0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf0" ):
                listener.enterIf0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf0" ):
                listener.exitIf0(self)




    def if0(self):

        localctx = PiinkkParser.If0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_if0)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(PiinkkParser.IF)
            self.state = 117
            self.match(PiinkkParser.T__3)
            self.state = 118
            self.expresion0()
            self.state = 119
            self.match(PiinkkParser.T__4)
            self.state = 120
            self.if1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloque0(self):
            return self.getTypedRuleContext(PiinkkParser.Bloque0Context,0)


        def else0(self):
            return self.getTypedRuleContext(PiinkkParser.Else0Context,0)


        def getRuleIndex(self):
            return PiinkkParser.RULE_if1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf1" ):
                listener.enterIf1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf1" ):
                listener.exitIf1(self)




    def if1(self):

        localctx = PiinkkParser.If1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_if1)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.bloque0()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==37:
                self.state = 123
                self.else0()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(PiinkkParser.ELSE, 0)

        def bloque0(self):
            return self.getTypedRuleContext(PiinkkParser.Bloque0Context,0)


        def getRuleIndex(self):
            return PiinkkParser.RULE_else0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse0" ):
                listener.enterElse0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse0" ):
                listener.exitElse0(self)




    def else0(self):

        localctx = PiinkkParser.Else0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_else0)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(PiinkkParser.ELSE)
            self.state = 127
            self.bloque0()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(PiinkkParser.WHILE, 0)

        def expresion0(self):
            return self.getTypedRuleContext(PiinkkParser.Expresion0Context,0)


        def while1(self):
            return self.getTypedRuleContext(PiinkkParser.While1Context,0)


        def getRuleIndex(self):
            return PiinkkParser.RULE_while0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile0" ):
                listener.enterWhile0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile0" ):
                listener.exitWhile0(self)




    def while0(self):

        localctx = PiinkkParser.While0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_while0)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(PiinkkParser.WHILE)
            self.state = 130
            self.match(PiinkkParser.T__3)
            self.state = 131
            self.expresion0()
            self.state = 132
            self.match(PiinkkParser.T__4)
            self.state = 133
            self.while1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(PiinkkParser.DO, 0)

        def bloque0(self):
            return self.getTypedRuleContext(PiinkkParser.Bloque0Context,0)


        def getRuleIndex(self):
            return PiinkkParser.RULE_while1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile1" ):
                listener.enterWhile1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile1" ):
                listener.exitWhile1(self)




    def while1(self):

        localctx = PiinkkParser.While1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_while1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(PiinkkParser.DO)
            self.state = 136
            self.bloque0()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(PiinkkParser.FOR, 0)

        def ID(self):
            return self.getToken(PiinkkParser.ID, 0)

        def exp0(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PiinkkParser.Exp0Context)
            else:
                return self.getTypedRuleContext(PiinkkParser.Exp0Context,i)


        def TO(self):
            return self.getToken(PiinkkParser.TO, 0)

        def DO(self):
            return self.getToken(PiinkkParser.DO, 0)

        def bloque0(self):
            return self.getTypedRuleContext(PiinkkParser.Bloque0Context,0)


        def getRuleIndex(self):
            return PiinkkParser.RULE_for0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor0" ):
                listener.enterFor0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor0" ):
                listener.exitFor0(self)




    def for0(self):

        localctx = PiinkkParser.For0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_for0)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(PiinkkParser.FOR)
            self.state = 139
            self.match(PiinkkParser.ID)
            self.state = 140
            self.match(PiinkkParser.T__5)
            self.state = 141
            self.exp0()
            self.state = 142
            self.match(PiinkkParser.TO)
            self.state = 143
            self.exp0()
            self.state = 144
            self.match(PiinkkParser.DO)
            self.state = 145
            self.bloque0()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PiinkkParser.ID, 0)

        def array0(self):
            return self.getTypedRuleContext(PiinkkParser.Array0Context,0)


        def NUMBER(self):
            return self.getToken(PiinkkParser.NUMBER, 0)

        def FLOAT_NUMBER(self):
            return self.getToken(PiinkkParser.FLOAT_NUMBER, 0)

        def getRuleIndex(self):
            return PiinkkParser.RULE_var0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar0" ):
                listener.enterVar0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar0" ):
                listener.exitVar0(self)




    def var0(self):

        localctx = PiinkkParser.Var0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_var0)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.match(PiinkkParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.array0()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 149
                self.match(PiinkkParser.NUMBER)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 150
                self.match(PiinkkParser.FLOAT_NUMBER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PiinkkParser.ID, 0)

        def array0(self):
            return self.getTypedRuleContext(PiinkkParser.Array0Context,0)


        def getRuleIndex(self):
            return PiinkkParser.RULE_var1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar1" ):
                listener.enterVar1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar1" ):
                listener.exitVar1(self)




    def var1(self):

        localctx = PiinkkParser.Var1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_var1)
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.match(PiinkkParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.array0()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARS(self):
            return self.getToken(PiinkkParser.VARS, 0)

        def vars1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PiinkkParser.Vars1Context)
            else:
                return self.getTypedRuleContext(PiinkkParser.Vars1Context,i)


        def getRuleIndex(self):
            return PiinkkParser.RULE_vars0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars0" ):
                listener.enterVars0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars0" ):
                listener.exitVars0(self)




    def vars0(self):

        localctx = PiinkkParser.Vars0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_vars0)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(PiinkkParser.VARS)
            self.state = 161 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 158
                self.vars1()
                self.state = 159
                self.match(PiinkkParser.T__0)
                self.state = 163 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==27 or _la==28):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type0(self):
            return self.getTypedRuleContext(PiinkkParser.Type0Context,0)


        def var1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PiinkkParser.Var1Context)
            else:
                return self.getTypedRuleContext(PiinkkParser.Var1Context,i)


        def getRuleIndex(self):
            return PiinkkParser.RULE_vars1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars1" ):
                listener.enterVars1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars1" ):
                listener.exitVars1(self)




    def vars1(self):

        localctx = PiinkkParser.Vars1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_vars1)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.type0()
            self.state = 166
            self.match(PiinkkParser.T__6)
            self.state = 167
            self.var1()
            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 168
                self.match(PiinkkParser.T__7)
                self.state = 169
                self.var1()
                self.state = 174
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expresion0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp0(self):
            return self.getTypedRuleContext(PiinkkParser.Exp0Context,0)


        def expresion1(self):
            return self.getTypedRuleContext(PiinkkParser.Expresion1Context,0)


        def getRuleIndex(self):
            return PiinkkParser.RULE_expresion0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion0" ):
                listener.enterExpresion0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion0" ):
                listener.exitExpresion0(self)




    def expresion0(self):

        localctx = PiinkkParser.Expresion0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_expresion0)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.exp0()
            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 32256) != 0):
                self.state = 176
                self.expresion1()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expresion1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion0(self):
            return self.getTypedRuleContext(PiinkkParser.Expresion0Context,0)


        def getRuleIndex(self):
            return PiinkkParser.RULE_expresion1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion1" ):
                listener.enterExpresion1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion1" ):
                listener.exitExpresion1(self)




    def expresion1(self):

        localctx = PiinkkParser.Expresion1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_expresion1)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 32256) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 180
            self.expresion0()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termino0(self):
            return self.getTypedRuleContext(PiinkkParser.Termino0Context,0)


        def exp1(self):
            return self.getTypedRuleContext(PiinkkParser.Exp1Context,0)


        def getRuleIndex(self):
            return PiinkkParser.RULE_exp0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp0" ):
                listener.enterExp0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp0" ):
                listener.exitExp0(self)




    def exp0(self):

        localctx = PiinkkParser.Exp0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_exp0)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.termino0()
            self.state = 184
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15 or _la==16:
                self.state = 183
                self.exp1()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
